--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Biker zone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/1db82cd366.js" crossorigin="anonymous"></script>
+
 </head>
   <body>
 
@@ -39,7 +41,7 @@
             </div>
           </nav> 
           <div class="container-fluid ">
-            <div class="row row-cols-1 row-cols-lg-2 mx-auto justify-content-center align-items-center">
+            <div class="row row-cols-1 row-cols-lg-2 ms-5 justify-content-center align-items-center">
               <div class="col text-light mt-5 ">
                 <p class="">Computer-controlled digital transistorized with electronic advance</p>
                 <h1 class="">Honda CBR 300R</h1>
@@ -53,8 +55,168 @@
 
           </div>
     </header>
-    
 
+<main>
+  <h1 class="text-center pt-5">Fetured Bikes In This Year</h1>
+  <h5 class="text-center ps-5 text-danger">Best bike collection</h5>
+  <hr class="bg-danger ps-5 w-75 align-items-center justify-content-center ms-5">
+ <!-- futures section -->
+  <section class="container-fluid">
+    <div class="row row-cols-1 row-cols-lg-3 mx-auto my-3 text-center g-5 bg-white">
+      <div class="col">
+        <img  class="img-fluid w-50" src="/images/feature-bike.jpg" alt="">
+      </div>
+      <div class="col">
+        <img  class="img-fluid w-50" src="/images/feature-bike.jpg" alt="">
+      </div>
+      <div class="col">
+        <img  class="img-fluid w-50" src="/images/feature-bike.jpg" alt="">
+      </div>  
+    </div>
+  </section>
+  <!-- latest-news section  -->
+<section class="container-fluid">
+  <h1 class="text-center mt-3 mb-5">Latest News</h1>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100 rounded-5">
+        <img src="images/bike-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2>Ducati XDIAVEL S-73</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        </div>
+      <button class="btn btn-danger w-25 mx-3 mb-3 login-btn">Read More</button>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100 rounded-5">
+        <img src="images/bike-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2>Motorcycles & Scooters</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        </div>
+      <button class="btn btn-outline-danger w-25 mx-3 mb-3 ">Read More</button>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100 rounded-5">
+        <img src="images/bike-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2>2023 Honda CBR500R</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        </div>
+      <button class="btn btn-outline-danger w-25 mx-3 mb-3">Read More</button>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- happy clients section -->
+<section class="container-fluid mt-5 text-center">
+  <h1 class="text-center py-5">Happy <span class="text-danger">Clients Says</span> </h1>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card text-center h-100">
+        <img src="/logos/user-1.png" class="w-25 mx-auto mt-3 card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="text-warning">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </p>
+          <h5 class="text-primary">Micheal Jackson</h5>
+          <p>Banker, Boston</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card text-center h-100">
+        <img src="/logos/user-2.png" class="w-25 mx-auto mt-3 card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="text-warning">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </p>
+          <h5 class="text-primary">Micheal Jackson</h5>
+          <p>Banker, Boston</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100 text-center">
+        <img src="/logos/user-3.png" class="w-25 mx-auto mt-3 card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <p class="text-warning">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-stroke"></i>
+          </p>
+          <h5 class="text-primary">Micheal Jackson</h5>
+          <p>Banker, Boston</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- FAQ section -->
+<section class="container-fluid mt-5">
+<h1 class="text-center pb-5">Frequently Asked <span class="text-danger">Questions</span></h1>
+<div class="row row-cols-1 row-cols-md-2  mt-5 g-4">
+  <div class="col">
+<img class="w-50 align-items-center justify-content-center" src="/images/faq.png" alt="">
+  </div>
+  <div class="col">
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+</main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
