addeded RAIHAN Kutta

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Header section -->
     <header class="bz-exm">
         <nav class="navbar navbar-expand-lg m-lg-auto">
+          <p >
+            <a class="text-light text-decoration-none"  href="https://www.facebook.com/profile.php?id=100017187583972">RAIHAN BIKES BD</a>
+          </p>
             <div class="container-fluid ">
               <button class="navbar-toggler text-bg-light border-1" type="button" 
                 data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" 
@@ -179,48 +182,51 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Accordion Item #1
+             <strong> Am I write the poem?</strong> 
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong > শুনো,মন কেনো বদলায়  রঙ এতো?.</strong> দেখো, ভালোবাসার মিলন হয় কত্তো!,লিখো,ভুলে যায় জীবনের সংঘাত যতো!<code>.বলো,</code>,তার হৃদয়ের গভীরতা কতো?.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Accordion Item #2
+               <strong> Who is my best friend ?</strong>
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>প্রিয় বন্ধু, চট্টগ্রাম মেডিকেল এর মেধাবী মুখ হবু ডাক্তার <strong style="color: red;"> Latifur Rahman Makin </strong>  আমার ক্যাম্পাস দর্শনে এসেছিলো। এবং জাতী যেন বেশি বেশি অসুস্থ হয় সেই আশীর্বাদ করে গেলো 😄.</strong>.<code>.Amar matha</code>, abul miya
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
+                <strong>My study subject prof ?</strong>
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong style="color: lightseagreen;">জন্মলগ্ন থেকে  মানুষের অস্তিত্ব রক্ষার কারিগর, উৎপাদক শ্রেণী গাছপালা। কৃতজ্ঞ মানুষ হিসাবে নিজেকে পরিচয় দিতে চাইলে গাছের হক রক্ষা করা একান্ত কর্তব্য ও দায়িত্ব। গাছ লাগানো, গাছের যত্ন, গাছকে জানা,ভালোবাসা এসব হক্কুল গাছের মধ্যে অবশ্যই পড়ে।
+                  সুতরাং আসুন গাছ সংশ্লিষ্ট সবকিছু কে শ্রদ্বা ও ভালোবাসি। 🤩🤩</strong>
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Accordion Item #4
+               <strong>Who is my best friend 2 ?</strong>
               </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+               <strong style="color:darkblue;">মহাকালের ভাসমান স্রোতে বা রাতের অগুণন তাঁরার ভাঁজে, তুমি আমার প্রতিদিনের শুকতাঁরা - সন্ধ্যাতাঁরা। ছেলেবেলা থেকে আজ-অবধি আমাদের বন্ধুত্বের শিলায় বহুবার আগুন জ্বলেছে, কখনো পুঁড়ে যায়নি। বারবার কষ্টিপাথরে রূপ নিয়েছি। 
+                অসময়। 
+                স্বপ্ন তোমায় ডানা দিয়েছে। উড়ে চলো আকাশে, মাটি আর শিকড়ের ঘ্রাণ বুকে নিয়ে। আমিও চেয়ে থাকবো,তোমার নীলের ছোঁয়ায় চোখ রাখবো।  আমাদের দিনগুলো প্রাণ পাক, যেখানে আত্মার মিলন হয়।🖤🖤Latifur Rahman Makinkin</strong>
               </div>
             </div>
           </div>
