--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="bz-exm">
         <nav class="navbar navbar-expand-lg m-lg-auto">
           <p >
-            <a class="text-light text-decoration-none"  href="https://www.facebook.com/profile.php?id=100017187583972">RAIHAN BIKES BD</a>
+            <a class="text-light text-decoration-none"  href="https://www.facebook.com/profile.php?id=100017187583972" target="">RAIHAN BIKES BD</a>
           </p>
             <div class="container-fluid ">
               <button class="navbar-toggler text-bg-light border-1" type="button" 
